// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeViews CodeStatusbar displays no statusBarMessage 1`] = `
<div>
  <div
    class="sc-jcFjpl gutPlP"
  >
    <div
      class="sc-dkYRCH excEGN"
    />
  </div>
</div>
`;

exports[`CodeViews CodeStatusbar displays statusBarMessage 1`] = `
<div>
  <div
    class="sc-jcFjpl gutPlP"
  >
    <div
      class="sc-dkYRCH excEGN"
    >
      Started streaming 1 records after 5 ms and completed after 10  ms.
    </div>
  </div>
</div>
`;

exports[`CodeViews CodeView displays nothing if not successful query 1`] = `<div />`;

exports[`CodeViews CodeView displays request and response info if successful query 1`] = `
<div>
  <div
    class="sc-ieecCq idCpvQ"
  >
    <table
      class="sc-lbhJGD hqXwKq"
    >
      <tbody
        class="sc-iNGGcK ewIKBE"
      >
        <tr
          class="sc-eJwWfJ RRcLW"
        >
          <td
            class="sc-nVkyK kePivs"
          >
            Server version
          </td>
          <td
            class="sc-hiwPVj"
          >
            xx1
          </td>
        </tr>
        <tr
          class="sc-eJwWfJ RRcLW"
        >
          <td
            class="sc-nVkyK kePivs"
          >
            Server address
          </td>
          <td
            class="sc-hiwPVj"
          >
            xx2
          </td>
        </tr>
        <tr
          class="sc-eJwWfJ RRcLW"
        >
          <td
            class="sc-nVkyK kePivs"
          >
            Query
          </td>
          <td
            class="sc-hiwPVj"
          >
            MATCH xx0
          </td>
        </tr>
        <tr
          class="sc-eJwWfJ RRcLW"
        >
          <td
            class="sc-nVkyK kePivs"
          >
            Summary
            <div
              class="sc-jeraig eyUMIH fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-hiwPVj"
          >
            {,  "server": {,    "version": "xx1", ...
          </td>
        </tr>
        <tr
          class="sc-eJwWfJ RRcLW"
        >
          <td
            class="sc-nVkyK kePivs"
          >
            Response
            <div
              class="sc-jeraig eyUMIH fa fa-caret-right"
              title="Expand section"
            />
          </td>
          <td
            class="sc-hiwPVj"
          >
            [,  {,    "res": "xx3" ...
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
